refactored top social links

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,3 +7,4 @@ $bg-black: #000000;
 $txt-field: rgb(231, 232, 234);
 $bx-shadow: 0px 20px 40px -20px rgba(0, 0, 0, 0.4);
 $nav-bx-shadow: 0px 20px 40px -20px rgba(0, 0, 0, 0.2);
+$txt-secondary: #6c757d;
