Modified contact section(removed form)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -160,7 +160,10 @@ h3 {
 p {
   line-height: 1.7;
 }
-
+.contact-container {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
 // Footer
 footer {
   height: 180px;
