--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -207,7 +207,7 @@ footer {
 @media (min-width: 768px) {
   .headline-social {
     width: auto;
-    height: 700px;
+    height: 100vh;
     background-size: cover;
     background-position: center;
 
