--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -207,7 +207,7 @@ footer {
 @media (min-width: 768px) {
   .headline-social {
     width: auto;
-    height: 100vh;
+    height: 700px;
     background-size: cover;
     background-position: center;
 
@@ -232,7 +232,7 @@ footer {
 @media (min-width: 992px) {
   .headline-social {
     width: auto;
-    height: 100vh;
+    height: 700px;
     background-size: cover;
     background-position: center;
 
